tests/integration/fail/and_number_bool.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::NAryPrimopTypeError'
0 && true
